shared-business-logics/services/transaction-orchestration/Backend/Java/audit-trail-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-trail-service
  namespace: transaction-orchestration
  labels:
    app: audit-trail-service
    team: team-b-transaction
spec:
  type: ClusterIP
  selector:
    app: audit-trail-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  sessionAffinity: None
